--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer id="footer-container">
         <div class="footer-container">
             <div class="footer-logo">
                 <img src="logo1.png" alt="Company Logo">
